--- a/about.html
+++ b/about.html
@@ -8,5 +8,8 @@
 	</head>
 	<body>
 		<h2>This is a About page</h2>
+		<p>
+			Lorem, ipsum dolor sit amet consectetur adipisicing elit. Autem, suscipit.
+		</p>
 	</body>
 </html>
