create html file name khoaiz
and also add a line in index.html file

--- a/khoaiz.html
+++ b/khoaiz.html
@@ -7,9 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>This is my First git</h1>
-    <h4>Add Gitlens extension</h4>
-    <p>i am khoaiz</p>
-    <b>hello</b>
+    <h1>i am khoaiz</h1>
   </body>
 </html>
