--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-  </head>
-  <body>
-    <h1>This is my First git</h1>
-    <h4>Add Gitlens extension</h4>
-    <p>i am khoaiz</p>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>Document</title>
+	</head>
+	<body>
+		<h1>This is my First git</h1>
+		<h4>Add Gitlens extension</h4>
+		<p>i am khoaiz</p>
+		<p>Thanks Khoiz.Yes, git branch work done</p>
+	</body>
 </html>
