update index file
update....

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<h4>Add Gitlens extension</h4>
 		<p>i am khoaiz</p>
 		<p>Thanks Khoiz.Yes, git branch work done</p>
+		<p>Khoaiz , I will pay $1000k per month you</p>
 	</body>
 	======= >>>>>>> 4ca3d48ec001e0ebe89f8f245e21607aa01fc5bd
 </html>
