--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 		<p>i am khoaiz</p>
 		<p>Thanks Khoiz.Yes, git branch work done</p>
 		<p>Khoaiz , I will pay $1000k per month you</p>
+		<p>ha ha ha  thankyou next month i will see you</p>
 	</body>
 </html>
